Correct SB icon spacing with new addition

--- a/css/style.css
+++ b/css/style.css
@@ -10499,7 +10499,7 @@ article .field-name-body #hexGrid li::before {
   .hex:nth-child(9n+8){ /* first hexagon of even rows */
     margin-right:0%;  /* = width of .hex / 2  to indent even rows */
   }
-  .hex:nth-child(9n+9){ /* first hexagon of even rows */
+  .hex:nth-child(9n+11){ /* first hexagon of even rows */
     margin-left:22.25%;  /* = width of .hex / 2  to indent even rows */
   }
 }
